# bbwidgets

./: .clang-format  .editorconfig  CMakeLists.txt  CMakeSettings.json
example/: CMakeLists.txt  led.cpp
include/bbwidgets/: Led.hpp  LedAnimated.hpp  LedDualState.hpp  LedMultiState.hpp  LedStyle.hpp  globals.hpp  led.hpp
lib/: CMakeLists.txt  Led.cpp  LedAnimated.cpp  LedDualState.cpp  LedStyle.cpp  led.cpp
test/: CMakeLists.txt  globals.cpp  main.cpp
